add box shadow and alt for logo images

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body class="bg-lightGrayishBlue min-h-screen flex font-manrope items-center justify-center">
 
   <!--Main Landmark-->
-  <main class=" flex sm:flex-row xs:flex-col bg-white xs:max-w-xs sm:max-w-[731px] rounded-lg sm:h-[282px] xs:h-fit" aria-labelledby="card-image">
-      <img src="./images/drawers.jpg" alt="styled furniture" class="sm:w-2xs sm:h-full xs:h-[200px] sm:rounded-l-lg xs:rounded-t-lg object-cover  object-left ">
+  <main class=" flex sm:flex-row xs:flex-col bg-white xs:max-w-xs sm:max-w-[731px] rounded-lg sm:h-[282px] xs:h-fit shadow-xl" aria-labelledby="card-image">
+      <img id="card-image" src="./images/drawers.jpg" alt="styled furniture" class="sm:w-2xs sm:h-full xs:h-[200px] sm:rounded-l-lg xs:rounded-t-lg object-cover  object-left ">
 
       <!--Section for Content-->
       <section class="flex flex-col sm:mt-8 xs:mt-9 sm:mr-13 sm:ml-10 xs:mx-8">
@@ -43,9 +43,9 @@
         <div class="sm:absolute sm:bottom-0 sm:transform sm:-translate-x-1/2 sm:translate-y-1/2 sm:rotate-45 w-4 h-4 bg-darkGrayishBlue"></div> 
         <p class="font-semibold text-xs text-grayishBlue pr-5 tracking-[5px]">SHARE</p>
       <div class="flex flex-row gap-4">
-        <img src="./images/icon-facebook.svg">
-        <img src="./images/icon-twitter.svg">
-        <img src="./images/icon-pinterest.svg">
+        <img src="./images/icon-facebook.svg" alt="facebook logo">
+        <img src="./images/icon-twitter.svg" alt="twitter logo">
+        <img src="./images/icon-pinterest.svg" alt="pinterest logo">
       </div>
     </div>
   </div>
